--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
+    "node-tweet-stream": "^2.0.1",
     "react": "^0.14.9",
+    "react-addons-update": "^15.6.0",
     "react-dom": "^0.14.9",
     "react-geolocated": "^2.0.0",
     "react-redux": "^5.0.5",
